--- a/Tiguan dic/manifest.json
+++ b/Tiguan dic/manifest.json
@@ -1,7 +1,7 @@
 {
     "version": "1.0",
-    "uniqueId": "5e725b43cbc5ccd685d52ce6b12306c3",
-    "title": "fade-300x600",
+    "uniqueId": "5e3cbc5ccd685d526b2306c725b41ce3",
+    "title": "Fade-300x600-2",
     "description": "",
     "width": 300,
     "height": 600,
