--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Midas/slider2.html
 Midas/slider.html
 Midas/fade7.html
 Hyundai/Slider.html
+Formatos ADS/Fades/Fade720x90.html
+Formatos ADS/Fades/Fade320x50.html
