--- a/Formatos con eventos/FORMULARIOS/242661/6173653/manifest.json
+++ b/Formatos con eventos/FORMULARIOS/242661/6173653/manifest.json
@@ -1,7 +1,7 @@
 {
     "version": "1.0",
     "uniqueId": "64e300ae137a65511884159a87dcb791",
-    "title": "Encriptado-test",
+    "title": "Encriptado",
     "description": "",
     "width": 300,
     "height": 600,
@@ -16,7 +16,7 @@
         }
     },
     "clicktags": {
-        "clickTAG": "https://momentosbancocencosud.pe/",
+        "clickTAG": "https:\/\/www.up.edu.mx\/en\/international\/mex\/",
     },
     "source": "formulario-def.html"
 }
