--- a/Formatos con eventos/FORMULARIOS/Cencosud/New folder/main/manifest.json
+++ b/Formatos con eventos/FORMULARIOS/Cencosud/New folder/main/manifest.json
@@ -1,7 +1,7 @@
 {
     "version": "1.0",
-    "uniqueId": "64e300ae137a65511884159a87dcb791",
-    "title": "Encriptado-test",
+    "uniqueId": "1b70941e6207bbb18e42965a224dbb88",
+    "title": "FORMULARIO-EVENTS-TEST1",
     "description": "",
     "width": 300,
     "height": 600,
@@ -16,6 +16,7 @@
         }
     },
     "clicktags": {
+
         "clickTAG": "https://momentosbancocencosud.pe/",
     },
     "source": "formulario-def.html"
