--- a/Mindtech/manifest.json
+++ b/Mindtech/manifest.json
@@ -1,7 +1,7 @@
 {
     "version": "1.0",
-    "uniqueId": "1b70941e618e42965207bbba224dbb88",
-    "title": "FORMULARIO-MINDTECH",
+    "uniqueId": "1b70941e618e42965204dbb7bbba2288",
+    "title": "FORMULARIO-MINDTECH-test2",
     "description": "",
     "width": 300,
     "height": 600,
@@ -17,7 +17,7 @@
     },
     "clicktags": {
 
-        "clickTAG": "https://momentosbancocencosud.pe/",
+        "clickTAG": "https://mindtechvigo.com/en/home/",
     },
     "source": "formulario-def.html"
 }
