--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Midas/fade7.html
 Hyundai/Slider.html
 Formatos ADS/Fades/Fade720x90.html
 Formatos ADS/Fades/Fade320x50.html
+Supervia2/fade-320x480.html
