--- a/Grupo Alsea/P.F. Chang/Cube/main/manifest.json
+++ b/Grupo Alsea/P.F. Chang/Cube/main/manifest.json
@@ -12,7 +12,7 @@
     },
     "clicktags": {
         "clickTAG": "https:\/\/pfchangsmexico.com.mx",
-        "clickTAG2": "https:\/\/pfchangsmexico.com.mx",
+        "clickTAG2": "https:\/\/goo.gl\/maps\/RYtDpN6rouoZJk6eA",
         "clickTAG3": "https:\/\/www.facebook.com\/sharer\/sharer.php?u=https:\/\/pfchangsmexico.com.mx",
         "clickTAG4": "https:\/\/whatsapp.com",
         "clickTAG5": "https:\/\/twitter.com\/home?status=https:\/\/pfchangsmexico.com.mx"
