--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Hyundai/Slider.html
 Formatos ADS/Fades/Fade720x90.html
 Formatos ADS/Fades/Fade320x50.html
 Supervia2/fade-320x480.html
+Falabella6/bernadette.ttf
